2007-10-02  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #469657

	* em-composer-prefs.c:
	* em-folder-tree-model.c:
	* em-format.c:
	* em-format-html.c:
	* em-migrate.c:
	* em-subscribe-editor.c:
	* mail-component.c:
	* mail-send-recv.c:
	* message-list.c:
	* importers/elm-importer.c:
	Use destroy functions in GHashTables to simplify memory management.

2007-10-01  Sankar P  <psankar@novell.com>

	* em-format-html.c: (efh_format_headers):
	Display Face header value if contacts doesn't 
	have any image associated with them.
	Fixes bug mentioned in #481235 and not the 
	enhnacement request.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	* em-account-editor.c:
	* evolution-mail.schemas.in:
	* mail-config.glade:
	Use consistent terminology for mail messages (#480621).

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #477045

	* em-format-html.c (efh_format_headers):
	* em-migrate.c (upgrade_passwords_1_2):
	Use GLib's Base64 API instead of Camel's.

2007-09-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #461195

	* mail-marshalers.list: Remove needless marshalers.

2007-09-27  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #477045

	* em-folder-tree.c:
	* em-folder-view.c:
	* em-popup.c:
	* mail-component.c:
	* mail-mt.c:
	* mail-send-recv.c:
	* message-list.c:
	Use standard icon names where applicable.

2007-09-21  Matthew Barnes  <mbarnes@redhat.com>

	* Makefile.am:
	Distribute README.async (#478704).

	* importers/Makefile.am:
	Remove references to evolution-outlook-importer.c and
	netscape-importer.c; we haven't shipped them for over two years
	(see ChangeLog entry for 2005-07-01).

2007-09-21  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #411125

	* message-list.etspec:
	Uses 'compare="collate"' instead of 'compare="string"' to handle UTF
	characters correctly.

2007-09-17  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #472865

	* em-composer-utils.c: (ask_confirm_for_unwanted_html_mail):